--- a/factorM_treasuries.Rmd
+++ b/factorM_treasuries.Rmd
@@ -4,7 +4,8 @@ output: html_document
 date: "2025-01-14"
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=TRUE}
+
 library(fredr)
 fredr_set_key("303c2d68bbb87a379b12111473969ddd")
 
@@ -20,14 +21,26 @@ fetch_treasury_data <- function(series_id) {
 #series IDs
 treasury_series <- c("DGS3MO", "DGS6MO", "DGS1", "DGS2", "DGS3", "DGS5", "DGS7", "DGS10", "DGS20")
 
-
 # Fetch data for all series
 treasury_data <- lapply(treasury_series, fetch_treasury_data)
-treasury_data
 
 # Combine into df
 library(dplyr)
+library(ggplot2)
+
 all_treasury_data <- bind_rows(treasury_data)
+
+ggplot(data = all_treasury_data, aes(x = date, y = value, color = series_id)) +
+  geom_line() +
+  labs(
+    title = "Treasury Rates Over Time",
+    x = "Date",
+    y = "Rate (%)",
+    color = "Treasury Series"
+  ) +
+  theme_minimal() +
+  scale_color_brewer(palette = "Set1")
+
 
 knitr::opts_chunk$set(echo = TRUE)
 ```
@@ -39,7 +52,7 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r cars}
-summary(cars)
+
 ```
 
 ## Including Plots
